0.2 (2014-02-09)
----------------

- Dropped dependency on ``nose-selecttests``.

0.1 (2013-09-07)
----------------

-  Initial version