@@ -1,3 +1,9 @@
+Next release
+------------
+
+- Remove dependency on ``pyramid.interfaces.ITemplateRenderer`` (which is
+  deprecated in Pyramid > 1.5).
+
 0.2 (2014-02-09)
 ----------------
 
